--- a/Async/index.html
+++ b/Async/index.html
@@ -4,10 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
   </head>
   <body>
-    <button id="clickButton">Click Me Once</button>
-    <script src="eventListener.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
